0.7.0 (currently working on)
- [#2387] Change: Require FORMidable 1.1.0
- [#2373] Feature: Add a context-sensitive help text for the attached files in the BE seminars editor
- [#2345] Feature: Display category icon in list view, fix
- [#1724] Fix: Entry date for time slots displays a date
- [#2362] Feature: Display image uploaded with seminar in single view
- [#2346] Feature: Display the category icons in the detail view
- [#2361] Feature: Display images uploaded for seminar in list view
- [#2352] Change: Show text "booked out" instead of empty string in registration column
- [#2354] Fix: getVacanciesOnRegistrationQueue returns wrong value for registrationQueue greater than zero
- [#2345] Feature: Display category icon in list view
- [#2312] Cleanup: Removed unneded condition in the selector widget code
- [#2319] Fix: Update the seminar's speaker and place fields less brutally
- [#2331] Feature: In the list view, link the speaker names to their home page (if they have any)
- [#2333] In the list view and single view, display a localized text next to the 0 vacancies for fully booked events
- [#2344] Feature: Allow to attach an image to seminar records
- [#2332] Feature: Allow to attach an icon to category records
- [#2330] Change: Make the begin date in time slots required
- [#2261] Feature: Show the owner data in the single view
- [#2336] Fix: Text "\ No newline at end of file" in two files
- [#2262] Feature: Add a new view "event headline"
- [#2329] Fix: Add a configcheck method check_tx_seminars_pi1 to remove the PHP notice from registrations- and categorylist
- [#2328] Fix: Selector widget does not get displayed
- [#2320] Feature: Link the teaser to the single view
- [#2318] Change: Make some fields in the time slots excludefields
- [#2263] Feature: Provide the seminar UID in the link to the login page
- [#1103] Change: Use real constructors instead of the old-style constructors
- [#2309] Change: Move the selector widget to its own class (a view)