@@ -88,6 +88,9 @@
 			<label index="tx_seminars_seminars.image">Image:</label>
 			<label index="tx_seminars_speakers">Speakers</label>
 			<label index="tx_seminars_speakers.title">Name:</label>
+			<label index="tx_seminars_speakers.gender">Gender:</label>
+			<label index="tx_seminars_speakers.gender_male">male</label>
+			<label index="tx_seminars_speakers.gender_female">female</label>
 			<label index="tx_seminars_speakers.organization">Organization:</label>
 			<label index="tx_seminars_speakers.homepage">Homepage:</label>
 			<label index="tx_seminars_speakers.description">Description:</label>
@@ -268,6 +271,9 @@
 			<label index="tx_seminars_seminars.image">Bild:</label>
 			<label index="tx_seminars_speakers">ReferentInnen</label>
 			<label index="tx_seminars_speakers.title">Name:</label>
+			<label index="tx_seminars_speakers.gender">Geschlecht:</label>
+			<label index="tx_seminars_speakers.gender_male">männlich</label>
+			<label index="tx_seminars_speakers.gender_female">weiblich</label>
 			<label index="tx_seminars_speakers.organization">Organisation:</label>
 			<label index="tx_seminars_speakers.homepage">Homepage:</label>
 			<label index="tx_seminars_speakers.description">Beschreibung:</label>
@@ -1347,6 +1353,9 @@
 			<label index="tx_seminars_seminars.divLabelAccess" type="integer">200750040</label>
 			<label index="tx_seminars_categories.icon" type="integer">57819822</label>
 			<label index="tx_seminars_seminars.image" type="integer">73502731</label>
+			<label index="tx_seminars_speakers.gender" type="integer">212491130</label>
+			<label index="tx_seminars_speakers.gender_male" type="integer">8189176</label>
+			<label index="tx_seminars_speakers.gender_female" type="integer">41138606</label>
 		</languageKey>
 		<languageKey index="nl" type="array">
 			<label index="moduleFunction.tx_seminars_modfunc1" type="integer">146176001</label>
@@ -2328,6 +2337,9 @@
 			<label index="tx_seminars_seminars.divLabelAccess">Access</label>
 			<label index="tx_seminars_categories.icon">Icon:</label>
 			<label index="tx_seminars_seminars.image">Image:</label>
+			<label index="tx_seminars_speakers.gender">Gender:</label>
+			<label index="tx_seminars_speakers.gender_male">male</label>
+			<label index="tx_seminars_speakers.gender_female">female</label>
 		</languageKey>
 		<languageKey index="dk" type="array">
 			<label index="moduleFunction.tx_seminars_modfunc1">Seminars</label>
